# pdx-tools

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  .oxfmtrc.json  .oxlintrc.json  .prettierignore  Cargo.toml  Cross.toml  README.md  justfile  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.json
src/admin/: Cargo.toml
src/admin/src/: main.rs  reprocess.rs  scratch.rs  utils.rs
src/api/: Cargo.toml
src/api-screenshot/: Cargo.toml
src/api-screenshot/src/: assets.rs  colors.rs  date_layer.rs  main.rs  parser.rs  renderer.rs  viewport.rs
src/api/src/: main.rs  screenshot.rs
src/applib/: Cargo.toml
src/applib-node/: Cargo.toml
src/applib-node/src/: hasher.rs  lib.rs  parser.rs
src/applib/src/: lib.rs  parser.rs
src/assets/: Cargo.toml
src/assets/src/: brotli_tee.rs  main.rs  sync_assets.rs  tokenize.rs
src/bench/: Cargo.toml
src/bench/assets/: provinces-0.r16.zst  provinces-1.r16.zst  provinces.rgb.zst
src/bench/src/: bench.rs  benchmarks.rs  criterion_benches.rs  criterion_main.rs  gungraun_main.rs  lib.rs  map.rs  schema.rs
src/bench/src/benchmarks/: map.rs  schema.rs
src/bumpalo-serde/: Cargo.toml  README.md
src/bumpalo-serde/src/: lib.rs
src/bumpalo-serde/src/tracked/: de.rs  mod.rs  path.rs  wrap.rs
src/bumpalo-serde/tests/: tracked_deserializer.rs
src/cli/: Cargo.toml
src/cli/src/: main.rs
src/cli/src/cli/: mod.rs  verbosity.rs
src/cli/src/cmd/: create_bundle.rs  duckdb.rs  fetch_assets.rs  reprocess.rs  tokenize.rs  transcode.rs
src/cli/src/cmd-fun/: ai_development.rs  province_borders.rs  province_names.rs  smallest_province.rs  terrain_mapper.rs
src/cli/src/rawbmp/: bmp.rs  mod.rs  utils.rs
src/cli/src/storage/: brotli_tee.rs  remote_parse.rs  zstd_tee.rs
src/desktop/: .gitignore  Cargo.toml  index.html  package.json  tsconfig.json  vite.config.ts
src/desktop/src/: App.tsx  index.css  main.tsx
src/desktop/src-tauri/: Cargo.toml  tauri.conf.json
src/desktop/src-tauri/icons/: icon.icns
src/desktop/src-tauri/src/: commands.rs  lib.rs
src/desktop/src/components/: EmptyState.tsx  SaveCard.tsx  SaveListGrid.tsx  SaveListHeader.tsx  SaveListToolbar.tsx  ScanErrorDialog.tsx
src/desktop/src/lib/: tauri.ts
src/desktop/src/stores/: saveListStore.ts
src/desktop/src/views/: SaveListView.tsx  SaveMapView.tsx  useMapInteractions.ts
src/eu4game/: Cargo.toml  build.rs
src/eu4game-data/: Cargo.toml  build.rs
src/eu4game-data/src/: lib.rs
src/eu4game/src/: achievements.rs  errors.rs  ext.rs  game.rs  lib.rs  models.rs  save_game_query.rs  shared.rs
src/eu4game/tests/it/: invalid_ironman.rs  ironman.rs  main.rs  playthrough_id.rs  shared.rs  utils.rs
src/eu4gamejs/: Cargo.toml
src/eu4gamejs/src/: hasher.rs  parser.rs
src/eu5app/: Cargo.toml
src/eu5app/src/: color.rs  entity_profile.rs  game_data.rs  gradient.rs  hexcolor.rs  hover.rs  insights.rs  lib.rs  map.rs  models.rs  overlay.rs  parsing.rs  presentation.rs  selection.rs  selection_views.rs  session.rs  subject_color.rs
src/eu5app/src/game_data/: error.rs  game_install.rs  hexcolor.rs  models.rs  optimized.rs  source.rs
src/eu5app/src/map/: app.rs
src/eu5app/src/presentation/: present_dto.rs
src/eu5app/src/session/: mod.rs  save_loader.rs  workspace.rs
src/eu5app/tests/it/: main.rs  utils.rs
src/eu5native/: Cargo.toml
src/eu5native/src/: date_layer.rs  gui.rs  headless.rs  main.rs  overlay.rs  selection_layer.rs
src/eu5native/src/shaders/: selection.wgsl
src/eu5save/: .gitignore  Cargo.toml
src/eu5save/src/: date.rs  errors.rs  file.rs  hash.rs  header.rs  lib.rs  melt.rs  models.rs
src/eu5save/src/models/: bstr.rs  building_manager.rs  character_db.rs  color.rs  countries.rs  culture_manager.rs  de.rs  diplomacy_manager.rs  loan_manager.rs  locations.rs  market_manager.rs  population.rs  religion_manager.rs  subunit_manager.rs  trade_manager.rs  unit_manager.rs  version.rs  war_manager.rs
src/eu5save/tests/it/: main.rs  utils.rs
src/packager/: Cargo.toml
src/packager/src/: achievements.rs  assets.rs  brotli_tee.rs  cultures.rs  lib.rs  localization.rs  mapper.rs  personalities.rs  religion.rs  tarball.rs
src/packager/src/rawbmp/: mod.rs
src/packager/tests/: rawbmp_tests.rs
src/pdx-admin-cli/: Cargo.toml
src/pdx-admin-cli/src/: color_mapper.rs  main.rs  og.rs  reprocess.rs  transcode.rs
src/pdx-assets/: Cargo.toml  README.md  policy.xml
src/pdx-assets/src/: asset_compilers.rs  bundler.rs  cli.rs  coat_of_arms.rs  de.rs  eu4.rs  eu5.rs  file_provider.rs  file_tracker.rs  http.rs  images.rs  lib.rs  main.rs  steam.rs  zstd_tee.rs
src/pdx-assets/src/cli/: bundle.rs  compile.rs  fetch_game.rs  pack.rs
src/pdx-assets/src/de/: vec_pair.rs
src/pdx-fun-cli/: Cargo.toml
src/pdx-fun-cli/src/: ai_development.rs  eu5_date_layer.rs  eu5_render.rs  index_image.rs  main.rs  province_names.rs  smallest_province.rs  terrain_mapper.rs
src/pdx-image/: Cargo.toml
src/pdx-image/src/: imagemagick.rs  lib.rs  rust.rs
src/pdx-map/: Cargo.toml  README.md
src/pdx-map-cli/: Cargo.toml
src/pdx-map-cli/src/: main.rs
src/pdx-map/src/: app.rs  color.rs  controller.rs  error.rs  hash.rs  hashtable.rs  image.rs  interaction.rs  layers.rs  lib.rs  loc_arrays.rs  overlay.rs  picker.rs  pixel.rs  renderer.rs  selection.rs  selection_layer.rs  units.rs  viewport.rs  world.rs
src/pdx-screenshot/: Cargo.toml
src/pdx-screenshot/src/: eu4.rs  lib.rs
src/pdx-tokenize-cli/: Cargo.toml
src/pdx-tokenize-cli/src/: main.rs  tokenize.rs
src/pdx-zstd/: Cargo.toml  README.md
src/pdx-zstd/src/: error.rs  lib.rs  zstd_tee.rs
src/schemas/: Cargo.toml  build.rs
src/schemas/benches/: schema_benchmark.rs
src/schemas/src/: eu4.fbs  eu4_generated.rs  lib.rs  resolver.rs  tokens.fbs
src/vic3save/: Cargo.toml  build.rs
src/vic3save/src/: deflate.rs  errors.rs  file.rs  flavor.rs  header.rs  lib.rs  markets.rs  melt.rs  savefile.rs  stats.rs  tokens.rs  vic3date.rs
src/vic3save/tests/: tests.rs  utils.rs
src/wasm-app/: Cargo.toml
src/wasm-app/src/: lib.rs
(+1957 files in other folders)
