[workspace]
resolver = "2"
members = [
    "src/api",
    "src/applib",
    "src/bumpalo-serde-derive",
    "src/bumpalo-serde",
    "src/eu4game-data",
    "src/eu4game",
    "src/eu5app",
    "src/eu5native",
    "src/eu5save",
    "src/pdx-admin-cli",
    "src/pdx-assets",
    "src/pdx-fun-cli",
    "src/pdx-map-cli",
    "src/pdx-map",
    "src/pdx-tokenize-cli",
    "src/pdx-zstd",
    "src/rawbmp",
    "src/schemas",
    "src/vic3save",
    "src/wasm-app",
    "src/wasm-ck3",
    "src/wasm-compress",
    "src/wasm-eu4",
    "src/wasm-hoi4",
    "src/wasm-imperator",
    "src/wasm-pdx-map",
    "src/wasm-vic3",
    "src/wasm-eu5",
    "src/wasm-eu5-map"
]

[workspace.dependencies]
anyhow = "1.0"
applib = { path = "src/applib", default-features = false }
attohttpc = "0.29.0"
axum = "0.8.4"
base64 = "0.22"
bumpalo = "3.19"
bumpalo-serde = { path = "src/bumpalo-serde" }
bumpalo-serde-derive = { path = "src/bumpalo-serde-derive" }
bytemuck = { version = "1.24" }
ck3save = { git = "https://github.com/rakaly/ck3save.git" }
clap = "4.5"
criterion = "0.5"
csv = "1.3"
env_logger = "0.11"
erased-serde = "0.4.5"
eu4game = { path = "src/eu4game", default-features = false }
eu4game-data = { path = "src/eu4game-data", default-features = false }
eu4save = { git = "https://github.com/rakaly/eu4save.git", default-features = false }
eu5app = { path = "src/eu5app", default-features = false }
eu5save = { path = "src/eu5save", default-features = false }
flatbuffers = "25.2.10"
flate2 = { version = "1.1.5", default-features = false }
futures-channel = { version = "0.3.31" }
getrandom = "0.2"
highway = "1.3"
hoi4save = { git = "https://github.com/rakaly/hoi4save.git" }
image = { version = "0.25.2", default-features = false }
imperator-save = { git = "https://github.com/rakaly/imperator-save.git" }
jomini = { version = "0.30", features = ["envelope"] }
js-sys = "0.3.77"
log = "0.4"
mathru = "0.15.3"
mimalloc = "0.1.43"
pdx-assets = { path = "src/pdx-assets" }
pdx-map = { path = "src/pdx-map", default-features = false }
pdx-zstd = { path = "src/pdx-zstd", default-features = false }
quote = "1.0.34"
rand = "0.8"
rawbmp = { path = "src/rawbmp" }
rawzip = "0.4.1"
rayon = "1.10"
regex = "1.11"
rstest = "0.26.1"
ruzstd = { version = "0.8.0" }
schemas = { path = "src/schemas" }
serde = "1.0.195"
serde_json = "1.0.114"
serde_path_to_error = "0.1"
serde-wasm-bindgen = "0.6.5"
specta = "1.0.4"
syn = { version = "2.0.50", features = ["derive"] }
tempfile = "3.3"
thiserror = "2.0.0"
tokio = { version = "1.45.0", default-features = false }
tower-http = "0.6.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tsify = { version = "0.5.5", default-features = false }
vic3save = { path = "src/vic3save" }
walkdir = "2.5.0"
wasm-bindgen = { version = "0.2.100", default-features = false }
wasm-bindgen-futures = "0.4.50"
wasm-bindgen-test = "0.3.50"
wasm-pdx-map = { path = "src/wasm-pdx-map" }
web-sys = "0.3.77"
webp = "0.3"
wgpu = { version = "27.0" }
zstd = { version = "0.13.0", default-features = false }

[workspace.lints]

[profile.release]
lto = "thin"
codegen-units = 1

[profile.bench]
lto = "thin"
codegen-units = 1

# We override the test profile so that our tests run in a tolerable time as
# some of the asset files are heavyweight and can take a significant amount of
# time. Here is some timing data recorded to run one test:
#
# cargo test                 0m15.037s
# cargo test (opt-level=3)   0m9.644s
# cargo test (+lto=thin)     0m0.907s
# cargo test --release       0m0.620s
[profile.test]
opt-level = 3
lto = "thin"
