[workspace]
resolver = "2"
members = [
    "src/api",
    "src/applib",
    "src/bumpalo-serde-derive",
    "src/bumpalo-serde",
    "src/eu4game-data",
    "src/eu4game",
    "src/eu5app",
    "src/eu5native",
    "src/eu5save",
    "src/pdx-admin-cli",
    "src/pdx-assets",
    "src/pdx-fun-cli",
    "src/pdx-map-cli",
    "src/pdx-map",
    "src/pdx-tokenize-cli",
    "src/pdx-zstd",
    "src/rawbmp",
    "src/schemas",
    "src/vic3save",
    "src/wasm-app",
    "src/wasm-ck3",
    "src/wasm-compress",
    "src/wasm-eu4",
    "src/wasm-hoi4",
    "src/wasm-imperator",
    "src/wasm-pdx-core",
    "src/wasm-pdx-map",
    "src/wasm-vic3",
    "src/wasm-eu5",
    "src/wasm-eu5-map"
]

[workspace.dependencies]
anyhow = "1.0"
applib = { path = "src/applib", default-features = false }
attohttpc = "0.30.1"
axum = "0.8.4"
base64 = "0.22"
bumpalo = "3.19"
bumpalo-serde = { path = "src/bumpalo-serde" }
bumpalo-serde-derive = { path = "src/bumpalo-serde-derive" }
bytemuck = { version = "1.24" }
ck3save = { git = "https://github.com/rakaly/ck3save.git" }
clap = "4.5"
criterion = "0.5"
csv = "1.3"
erased-serde = "0.4.5"
eu4game = { path = "src/eu4game", default-features = false }
eu4game-data = { path = "src/eu4game-data", default-features = false }
eu4save = { git = "https://github.com/rakaly/eu4save.git", default-features = false }
eu5app = { path = "src/eu5app", default-features = false }
eu5save = { path = "src/eu5save", default-features = false }
flatbuffers = "25.2.10"
flate2 = { version = "1.1.5", default-features = false }
futures-channel = { version = "0.3.31" }
getrandom = "0.3.4"
highway = "1.3"
hoi4save = { git = "https://github.com/rakaly/hoi4save.git" }
image = { version = "0.25.2", default-features = false }
imperator-save = { git = "https://github.com/rakaly/imperator-save.git" }
jomini = { version = "0.34", features = ["envelope"] }
js-sys = "0.3.83"
mathru = "0.16.2"
mimalloc = "0.1.43"
nu-ansi-term = "0.50.1"
pdx-assets = { path = "src/pdx-assets" }
pdx-map = { path = "src/pdx-map", default-features = false }
pdx-zstd = { path = "src/pdx-zstd", default-features = false }
postcard = { version = "1.1.3", default-features = false }
quote = "1.0.34"
rand = "0.9"
rawbmp = { path = "src/rawbmp" }
rawzip = "0.4.3"
rayon = "1.10"
regex = "1.11"
rstest = "0.26.1"
ruzstd = { version = "0.8.0" }
schemas = { path = "src/schemas" }
serde = "1.0.195"
serde_json = "1.0.114"
serde_path_to_error = "0.1"
serde-wasm-bindgen = "0.6.5"
sha1_smol = "1.0.1"
specta = "1.0.4"
syn = { version = "2.0.50", features = ["derive"] }
tempfile = "3.3"
thiserror = "2.0.0"
tokio = { version = "1.45.0", default-features = false }
tower-http = "0.6.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tsify = { version = "0.5.5", default-features = false }
vic3save = { path = "src/vic3save" }
walkdir = "2.5.0"
wasm-bindgen = { version = "0.2.106", default-features = false }
wasm-bindgen-futures = "0.4.56"
wasm-bindgen-test = "0.3.56"
wasm-pdx-core = { path = "src/wasm-pdx-core" }
wasm-pdx-map = { path = "src/wasm-pdx-map" }
web-sys = "0.3.83"
webp = "0.3"
wgpu = { version = "27.0" }
winit = "0.30"
zstd = { version = "0.13.0", default-features = false }

[workspace.lints]

[workspace.lints.rust] # https://microsoft.github.io/rust-guidelines/guidelines/universal/index.html#compiler-lints
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy] # https://microsoft.github.io/rust-guidelines/guidelines/universal/index.html
# cargo = { level = "warn", priority = -1 }     # disabled as not published to crates.io
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
# pedantic = { level = "warn", priority = -1 }  # disabled temporarily
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# These lints are from the `restriction` lint group and prevent specific
# constructs being used in source code in order to drive up consistency,
# quality, and brevity
# allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
# if_then_some_else_none = "warn"
# map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
# undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"

[profile.release]
lto = "thin"
codegen-units = 1

[profile.bench]
debug = true

# We override the test profile so that our tests run in a tolerable time as
# some of the asset files are heavyweight and can take a significant amount of
# time. Here is some timing data recorded to run one test:
#
# cargo test                 0m15.037s
# cargo test (opt-level=3)   0m9.644s
# cargo test (+lto=thin)     0m0.907s
# cargo test --release       0m0.620s
[profile.test]
opt-level = 3
lto = "thin"
