[package]
name = "admin-cli"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
applib = { path = "../applib" }
anyhow = "1"
brotli = "3"
csv = "1"
eu4game = { path = "../eu4game" }
eu4save = { git = "https://github.com/rakaly/eu4save.git", features = ["serialize"] }
flate2 = "1"
pico-args = "0.4"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tempfile = "3"
walkdir = "2"
