[package]
name = "pdx-tools-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { workspace = true }
tokio = { features = ["rt", "macros", "rt-multi-thread", "signal"] , workspace = true }
applib = { workspace = true }
eu4game = { workspace = true }
tower-http = { features = ["trace"] , workspace = true }
tracing = { workspace = true }
tracing-subscriber = { features = ["env-filter"] , workspace = true }
webp = { workspace = true }
image = { default-features = false, features = ["png"] , workspace = true }

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { workspace = true }
