[package]
name = "pdx-tools-api"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
axum = { workspace = true }
tokio = { features = ["rt", "macros", "rt-multi-thread", "signal"] , workspace = true }
applib = { workspace = true, default-features = false, features = ["zstd_c"] }
eu4game = { workspace = true, default-features = false, features = ["embedded", "zstd_c"] }
tower-http = { features = ["trace"] , workspace = true }
tracing = { workspace = true }
tracing-subscriber = { features = ["env-filter"] , workspace = true }
webp = { workspace = true }
image = { default-features = false, features = ["png"] , workspace = true }

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { workspace = true }
