[package]
name = "pdx-tools-api"
version = "0.1.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
applib = { workspace = true, default-features = false, features = ["zstd_c"] }
axum = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
image = { workspace = true, default-features = false, features = ["png"] }
pdx-map = { workspace = true, features = ["render", "date-layer", "tracing"] }
pdx-screenshot = { workspace = true, features = ["eu4"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "signal", "sync"] }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
webp = { workspace = true }

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { workspace = true }
