[package]
name = "bench"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
bench = false

[dependencies]
criterion = { workspace = true }
jomini = { workspace = true }
pdx-map = { workspace = true }
rand = { workspace = true }
schemas = { workspace = true }
zstd = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
criterion = { workspace = true, default-features = true }
gungraun = { workspace = true }

[[bench]]
name = "pdx-bench-criterion"
harness = false
path = "src/criterion_main.rs"

[[bench]]
name = "pdx-bench-gungraun"
harness = false
path = "src/gungraun_main.rs"
