[package]
name = "pdx"
version = "0.1.0"
edition = "2021"
publish = false

[features]
admin = ["create_bundle", "tokenize", "dep:applib", "dep:eu4game", "dep:eu4save", "dep:flate2"]
fun = ["compile_assets", "dep:applib", "dep:eu4game", "dep:eu4save", "dep:flate2"]

create_bundle = ["dep:zstd"]
compile_assets = ["dep:attohttpc", "dep:eu4save", "dep:jomini", "dep:eu4game-data", "dep:schemas", "schemas?/inline", "dep:zstd", "dep:pdx-image"]
tokenize = ["dep:zstd", "dep:schemas"]

[dependencies]
anyhow = { workspace = true }
applib = { optional = true , workspace = true, default-features = false, features = ["zstd_c"] }
attohttpc = { features = ["json"], optional = true , workspace = true }
chrono = { workspace = true }
clap = { features = ["derive", "env"] , workspace = true }
csv = { workspace = true }
env_logger = { workspace = true }
eu4game = { optional = true, default-features = false , workspace = true, features = ["zstd_c"] }
eu4game-data = { optional = true, default-features = false , workspace = true }
eu4save = { default-features = false, features = ["serialize", "zstd_c"], optional = true , workspace = true }
flate2 = { optional = true, default-features = false, features = ["zlib-rs"] , workspace = true }
highway = { workspace = true }
jomini = { optional = true , workspace = true }
log = { workspace = true }
pdx-image = { optional = true, workspace = true, features = ["rust"] }
rayon = { workspace = true }
regex = { workspace = true }
schemas = { optional = true , workspace = true }
serde = { features = ["derive"] , workspace = true }
serde_json = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
rawzip = { workspace = true }
zstd = { features = ["zstdmt"], optional = true , workspace = true }

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { workspace = true }
