[package]
name = "eu4game-data"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
embedded = []
tsify = ["dep:tsify", "dep:wasm-bindgen"]

[dependencies]
serde = { features = ["derive"] , workspace = true }
tsify = { default-features = false, optional = true , workspace = true }
wasm-bindgen = { default-features = false, optional = true , workspace = true }

[build-dependencies]
regex = { workspace = true }
