[package]
name = "eu5native"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
bumpalo = { workspace = true, features = ["collections"] }
bumpalo-serde = { workspace = true }
clap = { workspace = true, features = ["derive"] }
eu5app = { workspace = true, default-features = false, features = ["game-install", "zstd_c"] }
eu5save = { workspace = true }
image = { workspace = true, features = ["png"] }
nu-ansi-term = { workspace = true }
pdx-map = { workspace = true, features = ["render", "tracing"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
wgpu = { workspace = true }
winit = { workspace = true }
