[package]
name = "eu5save"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
bumpalo-serde = { workspace = true }
bumpalo = { workspace = true, features = ["collections"] }
flate2 = { workspace = true, default-features = false, features = ["zlib-rs"] }
jomini =  { workspace = true }
rawzip = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
attohttpc = { workspace = true }
highway = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }