[package]
name = "eu5save"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
bumpalo-serde = { workspace = true }
bumpalo = { workspace = true, features = ["collections"] }
jomini =  { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
tsify = { workspace = true }
wasm-bindgen = { workspace = true }

[dev-dependencies]
attohttpc = { workspace = true }
highway = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
