[package]
name = "packager"
version = "0.1.0"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
tar = "0.4"
tempfile = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jomini = "0.16"
regex = "1"
walkdir = "2.3.1" 
zstd = { version = "0.9", features = ["zstdmt"] }
csv = "1"
eu4save = { git = "https://github.com/rakaly/eu4save.git" }
schemas = { path = "../schemas" }
oxipng = "5"
pico-args = "0.4"
attohttpc = "0.18.0"

[dev-dependencies]
