[package]
name = "pdx-assets"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
attohttpc = { workspace = true }
clap = { features = ["derive"] , workspace = true }
csv = { workspace = true }
env_logger = { workspace = true }
eu4save = { default-features = false , workspace = true, features = ["zstd_c"] }
flate2 = { workspace = true, default-features = false, features = ["zlib-rs"]}
jomini = { workspace = true }
eu4game-data = { default-features = false , workspace = true }
log = { workspace = true }
rawbmp = { workspace = true }
rawzip = { workspace = true }
regex = { workspace = true }
schemas = { workspace = true, features = ["inline"] }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
zstd = { workspace = true }

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { workspace = true }
