[package]
name = "pdx-assets"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
attohttpc = { workspace = true }
clap = { workspace = true, features = ["derive"] }
csv = { workspace = true }
eu4game-data = { default-features = false , workspace = true }
eu4save = { default-features = false , workspace = true, features = ["zstd_c"] }
eu5app = { workspace = true, default-features = false, features = ["game-install", "zstd_c"] }
eu5save = { workspace = true }
flate2 = { workspace = true, default-features = false, features = ["zlib-rs"]}
jomini = { workspace = true }
pdx-zstd = { workspace = true, default-features = false, features = ["zstd_c"] }
postcard = { workspace = true }
rawbmp = { workspace = true }
rawzip = { workspace = true }
regex = { workspace = true }
schemas = { workspace = true, features = ["inline"] }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
walkdir = { workspace = true }
zstd = { workspace = true }

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { workspace = true }
